adding search for each routes
